--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -30,7 +30,7 @@
             <input id="submitDivButton" type="button" value="Divide" />
         </div>
 
-        <div>
+        <div> 
             <!-- I want a label -->
             <label> Answer: </label>
 
@@ -39,7 +39,7 @@
         </div>
         
         <!-- I want a tag that displays my reesults -->
-        <p id="answerFieldDisplay "></p>
+        <!--<p id="answerFieldDisplay"></p>-->
 
     </main>
 </body>
